--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           java-version: '20'
-      - name: Run the Maven verify phase
+      - name: Testing
         run: mvn test
