Build and run CI

--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -12,5 +12,6 @@ jobs:
       - name: Testing
         run: mvn test
       - name: Build and run
-        run: mvn package
+        run: |
+             mvn package
              java -Xmx1G -jar target/UnoTest-1.0-SNAPSHOT.jar inputs/lng-4.txt
